--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -1,43 +1,41 @@
 exec ualiases
 exec ubinds
-exec uhudsettings
 
-hud_combattext_batching_window "3.0"
+r_drawviewmodel 			"1"
+sensitivity 				"2.6"
 
-alias autocall_initial "hud_medicautocallersthreshold 50"
-alias autocall_temp "hud_medicautocallersthreshold 150"
-alias +autocall_temp_hit "autocall_temp"
-alias -autocall_temp_hit "autocall_initial"
+alias autocall_initial 		"hud_medicautocallersthreshold 50"
+alias autocall_temp 		"hud_medicautocallersthreshold 150"
+alias +autocall_temp_hit 	"autocall_temp"
+alias -autocall_temp_hit 	"autocall_initial"
+alias slot1bind 			"slot1; autocall_temp"
+alias slot2bind 			"slot2; autocall_initial"
 
-alias +heal "slot2; +attack; autocall_initial; r_drawviewmodel 0; viewmodel_fov 40"
-alias -heal "-attack"
-alias +needles "slot1; +attack; autocall_temp; r_drawviewmodel 0; vm_100"
-alias -needles "-attack"
-alias +saw "slot3; +attack; autocall_temp; r_drawviewmodel 1; vm_100"
-alias -saw "-attack"
-alias +charge "+attack2; slot2; dropitem; say_team "* Ubered, Sir! *"; voicemenu 2 3; autocall_initial"
-alias -charge "-attack2"
+alias +medigun 				"slot2; +attack; autocall_initial; r_drawviewmodel 1; viewmodel_fov 70"
+alias -medigun 				"-attack"
+alias +crossbow 			"slot1; +attack; autocall_temp; r_drawviewmodel 0; viewmodel_fov 90"
+alias -crossbow 			"-attack"
+alias +saw 					"slot3; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 90"
+alias -saw 					"-attack"
+alias +charge 				"+attack2; slot2; dropitem; say_team "* Using the Uber *"; voicemenu 2 3; autocall_initial"
+alias -charge 				"-attack2"
+alias +shiftmask 			"bind c "maskuber"; bind k "kill"; +showscores"
+alias -shiftmask 			"bind c "fakeuber"; unbind x; -showscores"
 
-alias +shiftmask "bind c "maskuber"; bind k "kill"; +showscores"
-alias -shiftmask "bind c "fakeuber"; unbind x; -showscores"	//mp_showrespawntimes; 
-alias slot1bind "slot1; autocall_temp"
-alias slot2bind "slot2; autocall_initial"
+alias fakeuber 				"voicemenu 1 7; say_team 		"* Stay calm, it was a fake *""
+alias maskuber 				"voicemenu 2 5; say_team 		"* Uber is ready to use *""
+alias preset_A 				"load_itempreset 0; say_team 	"* Took the Kritzkrieg *"
+alias preset_B 				"load_itempreset 1; say_team 	"* Took the Medigun *"
+alias preset_D 				"load_itempreset 3; say_team 	"* Took the Quickfix *"
 
-alias fakeuber "voicemenu 1 7; say_team "* Keep calm, it is a fake *""
-alias maskuber "voicemenu 2 5; say_team "* Uber ready to use! *""
-
-alias preset_A "load_itempreset 0; say_team "* Took the Kritzkrieg *"
-alias preset_B "load_itempreset 1; say_team "* Took the Medigun *"
-alias preset_D "load_itempreset 3; say_team "* Took the Quickfix *"
-bind "KP_HOME" "preset_A"
-bind "KP_UPARROW" "preset_B"
-bind "KP_PGUP" "preset_D"
-
-bind c "fakeuber"
-bind mouse1 "+heal"
-bind mouse2 "+needles"
-bind mouse3 "+attack3"
-bind mouse5 "+saw"
-bind mouse4 "+charge"
-bind SHIFT "+shiftmask"
-bind SPACE "+cjump"
+bind c 						"fakeuber"
+bind KP_HOME 				"preset_A"
+bind KP_UPARROW 			"preset_B"
+bind KP_PGUP 				"preset_D"
+bind SHIFT 					"+shiftmask"
+bind SPACE 					"+cjump"
+bind MOUSE1 				"+medigun"
+bind MOUSE2 				"+crossbow"
+bind MOUSE3 				"+reload"
+bind MOUSE4 				"+charge"
+bind MOUSE5 				"+saw"
