--- a/cfg/pyro.cfg
+++ b/cfg/pyro.cfg
@@ -1,6 +1,7 @@
 exec ualiases
 exec ubinds
-exec uhudsettings
 
-exec tfdb
-bind KP_RIGHTARROW "defpyro"
+r_drawviewmodel 	"1"
+viewmodel_fov 		"70"
+
+//exec tfdb
