--- a/cfg/soldier.cfg
+++ b/cfg/soldier.cfg
@@ -1,15 +1,16 @@
 exec ualiases
 exec ubinds
-exec uhudsettings
 
-vm_90
-alias +primary "slot1; +attack"
-alias -primary "-attack"
-alias +second "slot2; +attack"
-alias -second "-attack"
-alias +melee "slot3; +attack; voicemenu 2 3"
-alias -melee "-attack"
-bind mouse1 "+primary"
-bind mouse2 "+second"
-bind mouse5 "+melee"
-bind SPACE "+cjump"
+r_drawviewmodel 	"1"
+viewmodel_fov 		"90"
+
+alias +primary 		"slot1; +attack"
+alias -primary 		"-attack"
+alias +secondary 	"slot2; +attack"
+alias -secondary 	"-attack"
+alias +melee 		"slot3; +attack; voicemenu 2 3"
+alias -melee 		"-attack"
+bind mouse1 		"+primary"
+bind mouse2 		"+secondary"
+bind mouse5 		"+melee"
+bind SPACE 			"+cjump"
