--- a/cfg/spy.cfg
+++ b/cfg/spy.cfg
@@ -1,6 +1,10 @@
 exec ualiases
 exec ubinds
-exec uhudsettings
 
-vm_90
-bind MOUSE4 lastdisguise
+r_drawviewmodel 	"1"
+viewmodel_fov 		"90"
+
+alias +sapper 		"build 3 0; +attack"
+alias -sapper 		"slot2; -attack"
+bind MOUSE4 		"disguise 2 -1"
+bind MOUSE5 		"+sapper"
