--- a/cfg/tfdb.cfg
+++ b/cfg/tfdb.cfg
@@ -1,15 +1,14 @@
 exec ualiases
 exec ubinds
-exec uhudsettings
 
-vm_model_off
-vm_160
+"r_drawviewmodel 	"0"
+viewmodel_fov 		"160"
 
-alias +pr "slot1; +attack2"
-alias -pr "-attack2"
-alias +pr2 "slot1; +attack; voicemenu 2 6"
-alias -pr2 "-attack"
-bind mouse1 "+pr"
-bind mouse2 "+pr2"
-bind mouse4 "+forward"
-bind mouse5 "voicemenu 0 1"
+alias +pr 			"slot1; +attack2"
+alias -pr 			"-attack2"
+alias +pr2 			"slot1; +attack; voicemenu 2 6"
+alias -pr2 			"-attack"
+bind MOUSE1 		"+pr"
+bind MOUSE2 		"+pr2"
+bind MOUSE4 		"+forward"
+bind MOUSE5 		"voicemenu 0 1"
