--- a/cfg/udemos.cfg
+++ b/cfg/udemos.cfg
@@ -1,27 +1,25 @@
 exec ualiases
 exec ubinds
-exec uhudsettings
 
-vm_70
+r_drawviewmodel 					"1"
+viewmodel_fov 						"70"
 
-studio_queue_mode 0
-mat_queue_mode 1				//-1 by def, 2 is on, 0-1 is off
-hud_saytext_time 0
-cl_hud_playerclass_use_playermodel 0
-volume 0.1
+studio_queue_mode 					"0"
+mat_queue_mode 						"1"		//-1 by def, 2 is on, 0-1 is off
+hud_saytext_time 					"0"
+cl_hud_playerclass_use_playermodel 	"0"
+volume 								"0.1"
+hud_damagemeter 					"0"
+hud_damagemeter_ooctimer 			"1"
+hud_damagemeter_period 				"0"
 
-hud_damagemeter 1
-hud_damagemeter_ooctimer 1
-hud_damagemeter_period 0
-
-bind A "demo_timescale 0.3"
-bind W "demo_timescale 1"
-bind D "demo_timescale 6"
-bind Q "demo_gototick 1 pause"
-bind SPACE "demo_togglepause"
+bind a 								"demo_timescale 0.3"
+bind w 								"demo_timescale 1"
+bind d 								"demo_timescale 6"
+bind q 								"demo_gototick 1 pause"
+bind SPACE 							"demo_togglepause"
 
 clear
-
 echo ""
 echo "mat_queue_mode set to 1"
 echo ""
