--- a/cfg/uhudsettings.cfg
+++ b/cfg/uhudsettings.cfg
@@ -1,43 +1,57 @@
-//In-game HUD settings by Eniere (Aug. 23, 2014)
+//In-game HUD settings by Eniere (Jule 4th, 2015)
+//manual (to use in configs)
+alias vm_on 		"r_drawviewmodel 1"
+alias vm_off 		"r_drawviewmodel 0"
+alias fov_0 		"viewmodel_fov 0"
+alias fov_54 		"viewmodel_fov 54"
+alias fov_70 		"viewmodel_fov 70"
+alias fov_90 		"viewmodel_fov 90"
+alias fov_100 		"viewmodel_fov 100"
+alias fov_120 		"viewmodel_fov 120"
+alias fov_160 		"viewmodel_fov 160"
 
-alias vm_model_on 		"r_drawviewmodel 	"1"
-alias vm_model_off 		"r_drawviewmodel 	"0"
-alias vm_0 				"viewmodel_fov 0"
-alias vm_54 			"viewmodel_fov 54"
-alias vm_70 			"viewmodel_fov 70"
-alias vm_90 			"viewmodel_fov 90"
-alias vm_100 			"viewmodel_fov 100"
-alias vm_160 			"viewmodel_fov 160"
+alias x_no1 		"cl_crosshair_file "crosshair1"; 	cl_crosshair_scale 32"
+alias x_no2 		"cl_crosshair_file "crosshair2"; 	cl_crosshair_scale 32"
+alias x_no3 		"cl_crosshair_file "crosshair3"; 	cl_crosshair_scale 32"
+alias x_no4 		"cl_crosshair_file "crosshair4"; 	cl_crosshair_scale 32"
+alias x_no5 		"cl_crosshair_file "crosshair5"; 	cl_crosshair_scale 20"
+alias x_no6 		"cl_crosshair_file "crosshair6"; 	cl_crosshair_scale 32"
+alias x_no7			"cl_crosshair_file "crosshair7"; 	cl_crosshair_scale 32"
+alias x_def 		"cl_crosshair_file ""; 				cl_crosshair_scale 32"
+alias x_off 		"cl_crosshair_scale 0"
 
-//manual
-alias x_dot 			"cl_crosshair_file "crosshair5"; cl_crosshair_scale 20"
-alias x_plus 			"cl_crosshair_file "crosshair7"; cl_crosshair_scale 32"
-alias x_xdot 			"cl_crosshair_file "crosshair1"; cl_crosshair_scale 32"
-alias x_circle 			"cl_crosshair_file "crosshair3"; cl_crosshair_scale 32"
-alias x_def 			"cl_crosshair_file ""; cl_crosshair_scale 32"
-alias x_off 			"cl_crosshair_scale 0"
-alias x_color_grey 		"cl_crosshair_red 200; cl_crosshair_green 200; cl_crosshair_blue 200"
-alias x_color_yellow 	"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 0"
-alias x_color_green 	"cl_crosshair_red 0; cl_crosshair_green 255; cl_crosshair_blue 0"
-alias x_color_pink 		"cl_crosshair_red 255; cl_crosshair_green 0; cl_crosshair_blue 255"
-alias x_color_blue 		"cl_crosshair_red 0; cl_crosshair_green 0; cl_crosshair_blue 255"
-alias x_color_white 	"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 255"
-alias x_color_black 	"cl_crosshair_red 0; cl_crosshair_green 0; cl_crosshair_blue 0"
+alias x_grey 		"cl_crosshair_red 200; 	cl_crosshair_green 200; 	cl_crosshair_blue 200"
+alias x_yellow 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 0"
+alias x_green 		"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue 0"
+alias x_pink 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 255"
+alias x_blue 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255"
+alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255"
+alias x_black 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 
 //automatic
-alias x_type_switcher "x_dot"
-alias x_dot "cl_crosshair_file "crosshair5"; cl_crosshair_scale 20; alias x_type_switcher x_plus"
-alias x_plus "cl_crosshair_file "crosshair7"; cl_crosshair_scale 32; alias x_type_switcher x_xdot"
-alias x_xdot "cl_crosshair_file "crosshair1"; cl_crosshair_scale 32; alias x_type_switcher x_circle"
-alias x_circle "cl_crosshair_file "crosshair3"; cl_crosshair_scale 32; alias x_type_switcher x_off"
-alias x_off "cl_crosshair_scale 0; alias x_type_switcher x_dot"
+alias x_type_switcher "x_no1"
+alias x_no1 		"cl_crosshair_file "crosshair1"; 	alias x_type_switcher x_no2"
+alias x_no2 		"cl_crosshair_file "crosshair2"; 	alias x_type_switcher x_no3"
+alias x_no3 		"cl_crosshair_file "crosshair3"; 	alias x_type_switcher x_no4"
+alias x_no4 		"cl_crosshair_file "crosshair4"; 	alias x_type_switcher x_no5"
+alias x_no5 		"cl_crosshair_file "crosshair5"; 	alias x_type_switcher x_no6"
+alias x_no6 		"cl_crosshair_file "crosshair6"; 	alias x_type_switcher x_no7"
+alias x_no7			"cl_crosshair_file "crosshair7"; 	alias x_type_switcher x_no1"
 bind "KP_PLUS" "x_type_switcher"
-alias x_color_switcher "x_color_grey"
-alias x_color_grey 		"cl_crosshair_red 200; cl_crosshair_green 200; cl_crosshair_blue 200; alias x_color_switcher x_color_yellow"
-alias x_color_yellow 	"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 0; alias x_color_switcher x_color_green"
-alias x_color_green 	"cl_crosshair_red 0; cl_crosshair_green 255; cl_crosshair_blue 0; alias x_color_switcher x_color_pink"
-alias x_color_pink 		"cl_crosshair_red 255; cl_crosshair_green 0; cl_crosshair_blue 255; alias x_color_switcher x_color_blue"
-alias x_color_blue 		"cl_crosshair_red 0; cl_crosshair_green 0; cl_crosshair_blue 255; alias x_color_switcher x_color_white"
-alias x_color_white 	"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 255; alias x_color_switcher x_color_black"
-alias x_color_black 	"cl_crosshair_red 0; cl_crosshair_green 0; cl_crosshair_blue 0; alias x_color_switcher x_color_grey"
+
+alias x_color_switcher "x_grey"
+alias x_grey 		"cl_crosshair_red 200; 	cl_crosshair_green 200; 	cl_crosshair_blue 200; 	alias x_color_switcher x_yellow"
+alias x_yellow 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 0; 	alias x_color_switcher x_green"
+alias x_green 		"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue 0; 	alias x_color_switcher x_pink"
+alias x_pink 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_blue"
+alias x_blue 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_white"
+alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255; 	alias x_color_switcher x_black"
+alias x_black 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0; 	alias x_color_switcher x_grey"
 bind "KP_MINUS" "x_color_switcher"
+
+alias x_size_switcher "x_20"
+alias x_20 	"cl_crosshair_scale 20; 	alias x_size_switcher x_32"
+alias x_32 	"cl_crosshair_scale 32; 	alias x_size_switcher x_64"
+alias x_64 	"cl_crosshair_scale 64; 	alias x_size_switcher x_0"
+alias x_0 	"cl_crosshair_scale 0; 		alias x_size_switcher x_20"
+bind "KP_MULTIPLY" "x_size_switcher"
