--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,19 +1,15 @@
-exec usettings 		//once; main game parameters
-exec ugraphics_81 	//once; graphic config for '-dxlevel 81'
-//exec ugraphics_90 	//once; graphic config for '-dxlevel 90'
-//exec ugraphics_95 	//once; graphic config for '-dxlevel 95'
-//exec ugraphics_98 	//once; graphic config for '-dxlevel 98'
-exec unetwork 		//once; network settings
-exec umouse 		//once; mouse settings
-exec userver 		
-exec uhudsettings 	//multiple; crosshair and viewmodel settings
-exec ualiases 		//multiple
-exec ubinds 		//multiple; re-binds
+exec usettings
+exec ugraphics
+exec unetwork
+exec umouse
+exec userver
+exec ualiases
+exec ubinds
+
 clear
 echo ""
-echo "* Eniere's config loaded - May 15th, 2015 *"
+echo "* Eniere's config loaded - Jule 10th, 2015 *"
 echo ""
-//cpu_frequency_monitoring 2
-//-dxlevel 81 -full -w 1366 -h 768 -console -novid -useforcedmparms -noforcemaccel -noforcemspd
-//-dxlevel 90 -full -w 1366 -h 768 -console -novid -useforcedmparms -noforcemaccel -noforcemspd
-//-dxlevel 95 -sw -noborder -w 1280 -h 720 -console -novid -useforcedmparms -noforcemaccel -noforcemspd
+
+//-dxlevel 81 -novid -useforcedmparms -noforcemaccel -noforcemspd -console -w 1280 -h 720 -full
+//-dxlevel 95 -novid -useforcedmparms -noforcemaccel -noforcemspd -console -w 1920 -h 800 -sw -noborder
