--- a/cfg/scout.cfg
+++ b/cfg/scout.cfg
@@ -1,16 +1,17 @@
 exec ualiases
 exec ubinds
-exec uhudsettings
 
-vm_90
-hud_combattext_batching_window "3.0"
-alias +prm "slot1; +attack"
-alias -prm "-attack"
-alias +sec "slot2; +attack"
-alias -sec "-attack"
-alias +mle "slot3; +attack"
-alias -mle "-attack"
-bind mouse1 "+prm"
-bind mouse2 "+sec"
-bind mouse5 "+mle"
-bind SPACE "+cjump"
+r_drawviewmodel 	"0"
+sensitivity 		"2.5"
+
+viewmodel_fov 		"90"
+alias +scattergun 	"slot1; +attack; r_drawviewmodel 0"
+alias -scattergun 	"-attack"
+alias +pistol 		"slot2; +attack; r_drawviewmodel 1"
+alias -pistol 		"-attack"
+alias +thebat 		"slot3; +attack; r_drawviewmodel 1"
+alias -thebat 		"-attack; voicemenu 2 5"
+bind MOUSE1 		"+scattergun"
+bind MOUSE2 		"+pistol"
+bind MOUSE5 		"+thebat"
+bind SPACE 			"+cjump"
