--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -1,86 +1,88 @@
 unbindall
-bind "0" "slot10"
-bind "1" "slot1"
-bind "2" "slot2"
-bind "3" "slot3"
-bind "4" "slot4"
-bind "5" "slot5"
-bind "6" "slot6"
-bind "7" "slot7"
-bind "8" "slot8"
-bind "9" "slot9"
-bind "a" "+mleft"
-bind "b" "lastdisguise"
-bind "c" "voicemenu 2 0"
-bind "d" "+mright"
-bind "e" "voicemenu 0 0"
-bind "f" "prec"
-bind "g" "+taunt"
-bind "h" "+use_action_slot_item"
-bind "i" "showmapinfo"
-bind "j" "none"
-bind "k" "none"
-bind "l" "disguiseteam"
-bind "m" "open_charinfo_direct"
-bind "n" "open_charinfo_backpack"
-bind "p" "impulse 201"
-bind "q" "lastinv"
-bind "r" "+quickswitch"//"+reload"
-//bind "r" "+reload"
-bind "s" "+mback"
-bind "t" "say"
-bind "v" "+voicerecord"
-bind "w" "+mfwd"
-bind "y" "say_team"
-bind "z" "inspect"
-bind "KP_END" "voice_menu_1"
-bind "KP_DOWNARROW" "voice_menu_2"
-bind "KP_PGDN" "voice_menu_3"
-bind "KP_LEFTARROW" "join_class engineer; exec engineer"
-bind "KP_5" "join_class medic; exec medic"
-bind "KP_RIGHTARROW" "join_class pyro; exec pyro"
-bind "KP_HOME" "preset1"
-bind "KP_UPARROW" "preset2"
-bind "KP_PGUP" "preset3"
-bind "KP_PLUS" "x_type_switcher"
-bind "KP_MINUS" "x_color_switcher"
-bind "KP_MULTIPLY" "+quickswitch"
-bind "KP_SLASH" "record temp; stop; snd_restart; hud_reloadscheme; heartbeat;"
-unbind "-"
-unbind "="
-unbind "'"
-bind "`" "toggleconsole"
-bind "," "changeclass"
-bind "." "changeteam"
-unbind "/"
-bind "o" "disguiseteam"
-bind "SPACE" "+jump"
-bind "BACKSPACE" "dropitem"
-bind "TAB" "+showscores"
-bind "ESCAPE" "cancelselect"
-unbind "INS"
-unbind "END"
-unbind "PGUP"
-unbind "PGDN"
-bind "PAUSE" "pause"
-bind "SHIFT" "+showscores"//"+board"
-bind "ALT" "+strafe"
-bind "CTRL" "+duck"
-bind "F1" "toggle volume 0 0.05"
-bind "F2" "incrementvar volume 0 0.3 -0.01"
-bind "F3" "incrementvar volume 0 0.3 0.01"
-bind "F5" "incrementvar mat_monitorgamma 1.6 2.6 0.1"
-bind "F6" "incrementvar mat_monitorgamma 1.6 2.6 -0.1"
-bind "F7" "toggle r_drawviewmodel 0 1"
-bind "F8" "toggle hud_saytext_time 0 3"
-//bind "F8" "toggle cl_first_person_uses_world_model 1 0"
-//bind "F8" "toggle fov_desired 20 90"
-bind "F10" "hud_reloadscheme"
-bind "F11" "toggle cl_hud_minmode 0 1"
-unbind "F12"
-bind "MOUSE1" "+attack"
-bind "MOUSE2" "+attack2"
-bind "MOUSE3" "+attack3"
-bind "MOUSE5" "mle"
-bind "MWHEELUP" "invprev"
-bind "MWHEELDOWN" "invnext"
+bind 0 					"slot10"
+bind 1 					"slot1"
+bind 2 					"slot2"
+bind 3 					"slot3"
+bind 4 					"slot4"
+bind 5 					"slot5"
+bind 6 					"slot6"
+bind 7 					"slot7"
+bind 8 					"slot8"
+bind 9 					"slot9"
+bind a 					"+mleft"								//by ualiases.cfg
+bind b 					"mat_filtertextures 0; mat_picmip -1"
+bind c 					"voicemenu 2 0"
+bind d 					"+mright"								//by ualiases.cfg
+bind e 					"voicemenu 0 0"
+bind f 					"prec"									//by ualiases.cfg
+bind g 					"+taunt"
+bind h 					"+use_action_slot_item"
+unbind i 
+unbind j 
+unbind k 
+bind l 					"disguiseteam"
+bind m 					"open_charinfo_direct"
+bind n 					"open_charinfo_backpack"
+bind o 					"show_quest_log"
+bind p 					"impulse 201"
+bind q 					"lastinv"
+bind r 					"+quickswitch"
+bind s 					"+mback"								//by ualiases.cfg
+bind t 					"say"
+unbind u 
+bind v 					"+voicerecord"
+bind w 					"+mfwd"
+unbind x
+bind y 					"say_team"
+bind z 					"+inspect"
+bind KP_END 			"voice_menu_1"
+bind KP_DOWNARROW 		"voice_menu_2"
+bind KP_PGDN 			"voice_menu_3"
+bind KP_LEFTARROW 		"join_class engineer; exec engineer"
+bind KP_5 				"join_class medic; exec medic"
+bind KP_RIGHTARROW 		"join_class pyro; exec pyro"
+bind KP_HOME 			"preset1"
+bind KP_UPARROW 		"preset2"
+bind KP_PGUP 			"preset3"
+bind KP_PLUS 			"x_type_switcher"						//by ualiases.cfg
+bind KP_MINUS 			"x_color_switcher"						//by ualiases.cfg
+bind KP_MULTIPLY 		"x_size_switcher"						//by ualiases.cfg
+bind KP_SLASH 			"record temp; stop; snd_restart; hud_reloadscheme; heartbeat"
+unbind -
+unbind =
+unbind '
+bind ` 					"toggleconsole"
+bind , 					"changeclass"
+bind . 					"changeteam"
+unbind /
+bind SPACE 				"+jump"
+bind BACKSPACE 			"dropitem"
+bind TAB 				"+showscores"
+bind ESCAPE 			"cancelselect"
+unbind INS
+unbind END
+unbind PGUP
+unbind PGDN
+bind PAUSE 				"pause"
+bind SHIFT 				"+showscores"							//"+board"
+bind ALT 				"+strafe"
+bind CTRL 				"+duck"
+bind F1 				"toggle volume 0 0.05"
+bind F2 				"incrementvar volume 0 0.3 -0.01"
+bind F3 				"incrementvar volume 0 0.3 0.01"
+bind F4					"player_ready_toggle"
+bind F5 				"incrementvar mat_monitorgamma 1.6 2.6 0.1"
+bind F6 				"incrementvar mat_monitorgamma 1.6 2.6 -0.1"
+bind F7 				"toggle r_drawviewmodel 0 1"
+bind F8 				"toggle host_timescale 1 5"				//"toggle hud_saytext_time 0 3"
+bind F9 				"toggle mp_tournament_readymode 0 1"
+bind F10 				"hud_reloadscheme"
+bind F11				"toggle cl_hud_minmode 0 1"
+unbind F12
+bind MOUSE1 			"+attack"
+bind MOUSE2 			"+attack2"
+bind MOUSE3 			"+attack3"
+unbind MOUSE4
+bind MOUSE5 			"melee"									//by ualiases.cfg
+bind MWHEELUP 			"invprev"
+bind MWHEELDOWN 		"invnext"
