--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -1,32 +1,29 @@
-mp_maxrounds 0
-mp_timelimit 30
-mp_windifference 5
-mp_winlimit 0
-mp_allowspectators 1
-mp_disable_respawn_times 0
-mp_forcecamera 1
-mp_respawnwavetime 7.0
-mp_teams_unbalance_limit "0"
-mp_tournament "1"
-mp_tournament_stopwatch 1
-
-tv_enable 1
-
-sv_cheats 1
-
-tf_tournament_hide_domination_icons 1
-tf_use_fixed_weaponspreads 1
-tf_weapon_criticals 0
-
+mp_maxrounds 							"0"
+mp_timelimit 							"30"
+mp_windifference 						"5"
+mp_winlimit 							"0"
+mp_allowspectators 						"1"
+mp_disable_respawn_times 				"0"
+mp_forcecamera 							"1"
+mp_respawnwavetime 						"7.0"
+mp_teams_unbalance_limit 				"0"
+mp_tournament 							"1"
+mp_tournament_stopwatch 				"1"
+tv_enable 								"1"
+sv_cheats 								"1"
+tf_tournament_hide_domination_icons 	"1"
+tf_use_fixed_weaponspreads 				"1"
+tf_weapon_criticals 					"0"
 mp_tournament_restart
+mp_friendlyfire 						"1"
+host_timescale 							"1"
+tf_bot_keep_class_after_death 			"1"
+tf_bot_add 1 soldier red 				"R_SCOUT"
+tf_bot_add 1 medic red 					"R_MEDIC"
+tf_bot_add 1 soldier blue 				"B_SCOUT"
+tf_bot_add 1 medic blue 				"B_MEDIC"
+mp_tournament_readymode 				"0"
 
-mp_friendlyfire 1
-host_timescale 1
-
-tf_bot_add 1 soldier red "R_SCOUT"
-tf_bot_add 1 medic red "R_MEDIC"
-
-tf_bot_add 1 scout blue "B_SCOUT"
-tf_bot_add 1 medic blue "B_MEDIC"
-
-tf_bot_keep_class_after_death 1
+bind F9 								"toggle mp_tournament_readymode 0 1"
+bind F8 								"toggle host_timescale 1 5"
+bind MOUSE3 							"noclip"
