--- a/cfg/umouse.cfg
+++ b/cfg/umouse.cfg
@@ -1,4 +1,5 @@
-﻿//deathadder 2013 @ 1600dpi
+﻿//Razer DeathAdder 2013 @ 1600dpi
+
 m_customaccel 			"0"
 m_customaccel_exponent 	"1.200000"
 m_customaccel_max 		"0"
@@ -12,4 +13,4 @@ m_pitch 				"0.022"
 m_side 					"0.8"
 m_yaw 					"0.022"
 m_rawinput 				"1"
-sensitivity 			"3.000000"
+sensitivity 			"2.600000"
