--- a/cfg/unetwork.cfg
+++ b/cfg/unetwork.cfg
@@ -1,21 +1,3 @@
-cl_cmdrate 					"66"
-cl_interp 					"0.0152"
-cl_interp_ratio 			"1"
-cl_lagcompensation 			"1"
-cl_pred_optimize 			"2"
-cl_smooth 					"0"
-cl_smoothtime 				"0.01"
-cl_updaterate 				"66"
-rate 						"60000"
-net_graphheight 			"674"		// 720 640 110 Modify the height of your netgraph for fine modification.
-net_graphpos 				"1"			// 0 = left edge, 1 = right edge, 2 = centered, 3 or higher specifies the X co-ordinate of the graph's left edge.
-net_graphproportionalfont 	"0"			// Makes netgraph font size proportional to your screen's current resolution. On smaller displays, it's larger than it needs to be and fills up the scoreboard. Comment or set to 1 if you still want it.
-net_graphshowinterp 		"1"
-net_graphshowlatency 		"1"
-net_graphsolid 				"1"
-net_graphtext 				"1"
-net_graph 					"0"
-
 // Good connection
 //cl_cmdrate 66
 //cl_interp 0
@@ -37,3 +19,21 @@ net_graph 					"0"
 //cl_smoothtime 0.01
 //cl_updaterate 40
 //rate 35000
+
+cl_cmdrate 					"66"
+cl_interp 					"0.0303"	//0.0303 0.0152
+cl_interp_ratio 			"1"
+cl_lagcompensation 			"1"
+cl_pred_optimize 			"2"
+cl_smooth 					"0"
+cl_smoothtime 				"0.01"
+cl_updaterate 				"66"
+rate 						"60000"
+net_graphheight 			"674"		// 720 640 110 Modify the height of your netgraph for fine modification.
+net_graphpos 				"1"			// 0 = left edge, 1 = right edge, 2 = centered, 3 or higher specifies the X co-ordinate of the graph's left edge.
+net_graphproportionalfont 	"0"			// Makes netgraph font size proportional to your screen's current resolution. On smaller displays, it's larger than it needs to be and fills up the scoreboard. Comment or set to 1 if you still want it.
+net_graphshowinterp 		"1"
+net_graphshowlatency 		"1"
+net_graphsolid 				"1"
+net_graphtext 				"1"
+net_graph 					"0"
