--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -1,88 +1,90 @@
-fov_desired 						"90"
-cl_flipviewmodels 					"0"
-hud_takesshots 						"0"			//turn it on when prec is brocken again
-hud_freezecamhide 					"1"
-cl_showhelp 						"0"
-cl_mouselook 						"1"
-hud_fastswitch 						"1"
-cl_notifications_show_ingame 		"0"
-cl_trading_show_requests_from 		"2"
-hud_classautokill 					"0"
-cl_spec_mode 						"5"
-cl_disablehtmlmotd 					"0"			//1
-cl_autorezoom 						"1"
-tf_remember_activeweapon 			"1"
-tf_remember_lastswitched 			"1"
-cl_autoreload 						"1"
-tf_respawn_on_loadoutchanges 		"1"
-sb_dontshow_maxplayer_warning 		"1"
-sb_close_browser_on_connect 		"1"
-cl_steamscreenshots 				"1"
-tf_hud_no_crosshair_on_scope_zoom 	"0"
-cl_ask_favorite_opt_out 			"1"
-cl_ask_blacklist_opt_out 			"1"
-tf_coach_request_nevershowagain 	"1"
-hud_combattext 						"1"
-hud_combattext_healing 				"1"
-hud_combattext_batching 			"1"
-hud_combattext_batching_healing 	"1"
-hud_combattext_batching_window 		"2.6"		//testing
-cl_hudhint_sound 					"1"
-tf_dingalingaling 					"1"
-tf_dingaling_volume 				"1"
-tf_dingaling_pitchmindmg 			"115"
-tf_dingaling_pitchmaxdmg 			"22"
-tf_dingalingaling_repeat_delay 		"0.0"
-tf_simple_disguise_menu 			"0"
-tf_spectator_target_location 		"3"			//bottom right
-tf_colorblindassist 				"0"
-cl_spec_carrieditems 				"0"
-cl_use_tournament_specgui 			"1"
-cl_training_completed_with_classes 	"1"
-tf_medigun_autoheal 				"1"
-hud_medicautocallers 				"1"
-hud_medicautocallersthreshold 		"150"
-hud_medichealtargetmarker 			"0"
-tf_sniper_fullcharge_bell 			"1"
-commentary_firstrun 				"0"
-commentary 							"0"
-tv_nochat 							"0"
-cl_showpluginmessages 				"1"
-cl_timeout 							"120"
-cl_allowdownload 					"1"
-cl_downloadfilter 					"mapsonly"
-prec_notify 						"2"
-prec_mode 							"2"
-prec_min_streak 					"2"
-prec_kill_delay 					"15.0"
-prec_dir 							"demos"
-prec_sound 							"1"
-prec_screens 						"1"
-prec_log 							"1"
-prec_delete_useless_demo 			"0"
-prec_stv_status 					"1"
-prec_tag 							""
-prec_check_update 					"1"
-closecaption 						"0"
-cc_predisplay_time 					"0"
-cc_linger_time 						"4"
-tf_hud_show_servertimelimit 		"1"
-hud_saytext_time 					"3"
-cl_hud_playerclass_use_playermodel 	"0"
-mat_monitorgamma 					"2.6"
-dsp_enhance_stereo 					"0"
-snd_surround_speakers 				"0"
-voice_enable 						"0"
-//tf_hud_target_id_alpha 				"127"
+fov_desired 								"90"
+cl_flipviewmodels 							"0"
+hud_takesshots 								"0"					//turn it on when prec is brocken again
+hud_freezecamhide 							"0"
+cl_showhelp 								"0"
+cl_mouselook 								"1"
+hud_fastswitch 								"1"
+cl_notifications_show_ingame 				"0"
+cl_trading_show_requests_from 				"2"
+hud_classautokill 							"0"
+cl_spec_mode 								"5"
+cl_disablehtmlmotd 							"0"					//1
+cl_autorezoom 								"1"
+tf_remember_activeweapon 					"1"
+tf_remember_lastswitched 					"1"
+cl_autoreload 								"1"
+tf_respawn_on_loadoutchanges 				"1"
+sb_dontshow_maxplayer_warning 				"1"
+sb_close_browser_on_connect 				"1"
+cl_steamscreenshots 						"1"
+tf_hud_no_crosshair_on_scope_zoom 			"0"
+cl_ask_favorite_opt_out 					"1"
+cl_ask_blacklist_opt_out 					"1"
+tf_coach_request_nevershowagain 			"1"
+hud_combattext 								"1"
+hud_combattext_healing 						"1"
+hud_combattext_batching 					"1"
+hud_combattext_batching_window 				"3.0"
+cl_hudhint_sound 							"1"
+tf_dingalingaling 							"1"
+tf_dingaling_volume 						"1"
+tf_dingaling_pitchmindmg 					"115"
+tf_dingaling_pitchmaxdmg 					"22"
+tf_dingalingaling_repeat_delay 				"0.0"
+tf_simple_disguise_menu 					"0"
+tf_spectator_target_location 				"3"					//bottom right
+tf_colorblindassist 						"0"
+cl_spec_carrieditems 						"0"
+cl_use_tournament_specgui 					"1"
+cl_training_completed_with_classes 			"1"
+tf_medigun_autoheal 						"1"
+hud_medicautocallers 						"1"
+hud_medicautocallersthreshold 				"150"
+hud_medichealtargetmarker 					"0"
+tf_sniper_fullcharge_bell 					"1"
+commentary_firstrun 						"0"
+commentary 									"0"
+tv_nochat 									"0"
+cl_showpluginmessages 						"1"
+cl_timeout 									"120"
+cl_allowdownload 							"1"
+cl_downloadfilter 							"mapsonly"
+prec_notify 								"2"
+prec_mode 									"2"
+prec_min_streak 							"2"
+prec_kill_delay 							"15.0"
+prec_dir 									"demos"
+prec_sound 									"1"
+prec_screens 								"1"
+prec_log 									"1"
+prec_delete_useless_demo 					"0"
+prec_stv_status 							"1"
+prec_tag 									""
+prec_check_update 							"1"
+closecaption 								"0"
+cc_predisplay_time 							"0"
+cc_linger_time 								"4"
+tf_hud_show_servertimelimit 				"1"
+hud_saytext_time 							"3"
+cl_hud_playerclass_use_playermodel 			"0"
+mat_monitorgamma 							"2.3"
+dsp_enhance_stereo 							"0"
+snd_surround_speakers 						"0"
+voice_enable 								"0"
+con_enable 									"1"
+con_filter_enable 							"1"
+con_filter_text_out 						"Particle"
+con_filter_text_out 						"Material"
+con_filter_text_out 						"Muzzle"
+con_filter_text_out 						"Cannot update control point"
+con_filter_text_out 						"Doesn't have attachment"
+con_filter_text_out 						"Can't use cheat cvar"
+con_filter_text_out 						"Attemped to precache"
+con_filter_text_out 						"Connection to game coordinator established"
+con_filter_text_out 						"Error: Material"
+con_filter_text_out 						"No such variable"
+tf_hud_target_id_alpha 						"200"				//"100" by default
 tf_hud_target_id_disable_floating_health 	"1"
-con_enable 							"1"
-con_filter_enable 					"1"
-con_filter_text_out 				"Particle"
-con_filter_text_out 				"Material"
-con_filter_text_out 				"Muzzle"
-con_filter_text_out 				"Cannot update control point"
-con_filter_text_out 				"Doesn't have attachment"
-con_filter_text_out 				"Can't use cheat cvar"
-con_filter_text_out 				"Attemped to precache"
-con_filter_text_out 				"Connection to game coordinator established"
-con_filter_text_out 				"Error: Material"
+tf_hud_target_id_show_avatars 				"1"					//works only with enabled floating health
+tf_scoreboard_mouse_mode 					"1"
