--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,5 +1,5 @@
 exec usettings
-exec ugraphics
+exec ugraphicstest
 exec unetwork
 exec umouse
 exec userver
@@ -8,8 +8,8 @@ exec ubinds
 
 clear
 echo ""
-echo "* Eniere's config loaded - Jule 10th, 2015 *"
+echo "* Eniere's config loaded - Jule 14th, 2015 *"
 echo ""
 
-//-dxlevel 81 -novid -useforcedmparms -noforcemaccel -noforcemspd -console -w 1280 -h 720 -full
-//-dxlevel 95 -novid -useforcedmparms -noforcemaccel -noforcemspd -console -w 1920 -h 800 -sw -noborder
+//-dxlevel 81 -novid -w 1280 -h 720 -full
+//-dxlevel 95 -novid -w 1920 -h 800 -sw -noborder
