--- a/cfg/udemos.cfg
+++ b/cfg/udemos.cfg
@@ -4,7 +4,7 @@ exec ubinds
 r_drawviewmodel 					"1"
 viewmodel_fov 						"70"
 
-studio_queue_mode 					"0"
+//studio_queue_mode 					"0"
 mat_queue_mode 						"1"		//-1 by def, 2 is on, 0-1 is off
 hud_saytext_time 					"0"
 cl_hud_playerclass_use_playermodel 	"0"
