--- a/cfg/ugraphics.cfg
+++ b/cfg/ugraphics.cfg
@@ -1,3 +1,4 @@
+fps_max 							"132"
 cl_playerspraydisable 				"0"
 r_spray_lifetime 					"2"
 mat_shadowstate 					"0"			//"1"
@@ -7,7 +8,7 @@ r_shadows 							"0"			//"1"
 r_eyes 								"1"
 r_flex 								"1"
 r_lod 								"1"
-r_rootlod 							"1"			//models quality, "0" by default
+r_rootlod 							"1"
 r_teeth 							"1"
 cl_ragdoll_fade_time 				"0"
 cl_ragdoll_forcefade 				"1"
