--- a/cfg/uhudsettings.cfg
+++ b/cfg/uhudsettings.cfg
@@ -26,6 +26,7 @@ alias x_green 		"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue
 alias x_pink 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 255"
 alias x_blue 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255"
 alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255"
+alias x_red 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 alias x_black 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 
 //automatic
@@ -45,7 +46,8 @@ alias x_yellow 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_b
 alias x_green 		"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue 0; 	alias x_color_switcher x_pink"
 alias x_pink 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_blue"
 alias x_blue 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_white"
-alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255; 	alias x_color_switcher x_black"
+alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255; 	alias x_color_switcher x_red"
+alias x_red 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 0; 	alias x_color_switcher x_black"
 alias x_black 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0; 	alias x_color_switcher x_grey"
 bind "KP_MINUS" "x_color_switcher"
 
