--- a/cfg/medicpub.cfg
+++ b/cfg/medicpub.cfg
@@ -11,22 +11,22 @@ alias -autocall_temp_hit 	"autocall_initial"
 alias slot1bind 			"slot1; autocall_temp"
 alias slot2bind 			"slot2; autocall_initial"
 
-alias +medigun 				"slot2; +attack; autocall_initial; r_drawviewmodel 0; viewmodel_fov 40"
+alias +medigun 				"slot2; +attack; autocall_initial; r_drawviewmodel 1; viewmodel_fov 70"
 alias -medigun 				"-attack"
-alias +crossbow 			"slot1; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 70"
+alias +crossbow 			"slot1; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 90"
 alias -crossbow 			"-attack"
 alias +saw 					"slot3; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 90"
 alias -saw 					"-attack"
-alias +charge 				"+attack2; slot2; dropitem; say_team "* Using the Uber *"; voicemenu 2 3; autocall_initial"
+alias +charge 				"+attack2; slot2; dropitem; voicemenu 2 3; autocall_initial"
 alias -charge 				"-attack2"
 alias +shiftmask 			"bind c "maskuber"; bind k "kill"; +showscores"
 alias -shiftmask 			"bind c "fakeuber"; unbind x; -showscores"
 
-alias fakeuber 				"voicemenu 1 7; say_team 		"* Stay calm, it was a fake *""
-alias maskuber 				"voicemenu 2 5; say_team 		"* Uber is ready to use *""
-alias preset_A 				"load_itempreset 0; say_team 	"* Took the Kritzkrieg *"
-alias preset_B 				"load_itempreset 1; say_team 	"* Took the Medigun *"
-alias preset_D 				"load_itempreset 3; say_team 	"* Took the Quickfix *"
+alias fakeuber 				"voicemenu 1 7"
+alias maskuber 				"voicemenu 2 5"
+alias preset_A 				"load_itempreset 0"
+alias preset_B 				"load_itempreset 1"
+alias preset_D 				"load_itempreset 3"
 
 bind c 						"fakeuber"
 bind KP_HOME 				"preset_A"
