--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -18,11 +18,13 @@ mp_tournament_restart
 mp_friendlyfire 						"1"
 host_timescale 							"1"
 tf_bot_keep_class_after_death 			"1"
-tf_bot_add 1 soldier red 				"R_SCOUT"
-tf_bot_add 1 medic red 					"R_MEDIC"
-tf_bot_add 1 soldier blue 				"B_SCOUT"
-tf_bot_add 1 medic blue 				"B_MEDIC"
+tf_bot_add 1 scout red 					"RED Scout"
+tf_bot_add 1 medic red 					"RED Medic"
+tf_bot_add 1 scout blue 				"BLU Scout"
+tf_bot_add 1 medic blue 				"BLU Medic"
 mp_tournament_readymode 				"0"
+
+//vgui_drawtree							"1"
 
 bind F9 								"toggle mp_tournament_readymode 0 1"
 bind F8 								"toggle host_timescale 1 5"
