--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -72,8 +72,11 @@ mat_monitorgamma 							"2.0"
 dsp_enhance_stereo 							"0"
 snd_surround_speakers 						"0"
 voice_enable 								"0"
+developer 									"1"
+contimes 									"3"
 con_enable 									"1"
 con_filter_enable 							"1"
+con_filter_text 							"1"
 con_filter_text_out 						"Particle"
 con_filter_text_out 						"Material"
 con_filter_text_out 						"Muzzle"
