--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,4 +1,5 @@
 exec usettings
+exec uhudsettings
 exec ugraphicstest
 exec unetwork
 exec umouse
@@ -8,7 +9,7 @@ exec ubinds
 
 clear
 echo ""
-echo "* Eniere's config loaded - Jule 14th, 2015 *"
+echo "* Eniere's config loaded - August 1st, 2015 - 456e69657265 *"
 echo ""
 
 //-dxlevel 81 -novid -w 1280 -h 720 -full
