--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -31,7 +31,7 @@ bind s 					"+mback"								//by ualiases.cfg
 bind t 					"say"
 unbind u 
 bind v 					"+voicerecord"
-bind w 					"+mfwd"
+bind w 					"+mfwd"									//by ualiases.cfg
 unbind x
 bind y 					"say_team"
 bind z 					"+inspect"
@@ -65,8 +65,12 @@ unbind PGUP
 unbind PGDN
 bind PAUSE 				"pause"
 bind SHIFT 				"+showscores"							//"+board"
-bind ALT 				"+strafe"
+unbind ALT 														//"+strafe"
 bind CTRL 				"+duck"
+unbind UPARROW
+unbind LEFTARROW
+unbind DOWNARROW
+unbind RIGHTARROW
 bind F1 				"toggle volume 0 0.05"
 bind F2 				"incrementvar volume 0 0.3 -0.01"
 bind F3 				"incrementvar volume 0 0.3 0.01"
@@ -74,7 +78,7 @@ bind F4					"player_ready_toggle"
 bind F5 				"incrementvar mat_monitorgamma 1.6 2.6 0.1"
 bind F6 				"incrementvar mat_monitorgamma 1.6 2.6 -0.1"
 bind F7 				"toggle r_drawviewmodel 0 1"
-bind F8 				"toggle host_timescale 1 5"				//"toggle hud_saytext_time 0 3"
+bind F8 				"toggle host_timescale 0 1 5"			//"toggle hud_saytext_time 0 3"
 bind F9 				"toggle mp_tournament_readymode 0 1"
 bind F10 				"hud_reloadscheme"
 bind F11				"toggle cl_hud_minmode 0 1"
