--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,6 +1,6 @@
+exec ugraphicstest
 exec usettings
 exec uhudsettings
-exec ugraphicstest
 exec unetwork
 exec umouse
 exec userver
@@ -9,7 +9,7 @@ exec ubinds
 
 clear
 echo ""
-echo "* Eniere's config loaded - August 1st, 2015 - 456e69657265 *"
+echo "* Eniere's config loaded - August 28th, 2015 *"
 echo ""
 
 //-dxlevel 81 -novid -w 1280 -h 720 -full
