--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -68,7 +68,7 @@ bind SHIFT 				"+showscores"							//"+board"
 unbind ALT 														//"+strafe"
 bind CTRL 				"+duck"
 unbind UPARROW
-unbind LEFTARROW
+unbind LEFTARROW 		"sv_cheats 1; vgui_drawtree 1"
 unbind DOWNARROW
 unbind RIGHTARROW
 bind F1 				"toggle volume 0 0.05"
