--- a/cfg/userver.cfg
+++ b/cfg/userver.cfg
@@ -17,4 +17,4 @@ alias map3 			"rcon changelevel cp_granary_pro_b9; 		rcon changelevel cp_granary
 alias map4 			"rcon changelevel cp_process_final; 		rcon changelevel cp_process_final"
 alias map5 			"rcon changelevel cp_snakewater_final1; 	rcon changelevel cp_snakewater_final1"
 alias map6 			"rcon changelevel cp_sunshine_rc7; 			rcon changelevel cp_sunshine_rc7"
-alias map7 			"rcon changelevel koth_viaduct_pro7; 		rcon changelevel koth_viaduct_pro7"
+alias map7 			"rcon changelevel koth_product_rc8; 		rcon changelevel koth_product_rc8"
