--- a/cfg/uhudsettings.cfg
+++ b/cfg/uhudsettings.cfg
@@ -1,4 +1,4 @@
-//In-game HUD settings by Eniere (Jule 4th, 2015)
+//In-game HUD settings (October 6th, 2015)
 //manual (to use in configs)
 alias vm_on 		"r_drawviewmodel 1"
 alias vm_off 		"r_drawviewmodel 0"
@@ -23,10 +23,10 @@ alias x_off 		"cl_crosshair_scale 0"
 alias x_grey 		"cl_crosshair_red 200; 	cl_crosshair_green 200; 	cl_crosshair_blue 200"
 alias x_yellow 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 0"
 alias x_green 		"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue 0"
+alias x_red 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 alias x_pink 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 255"
 alias x_blue 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255"
 alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255"
-alias x_red 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 alias x_black 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 
 //automatic
@@ -43,11 +43,11 @@ bind "KP_PLUS" "x_type_switcher"
 alias x_color_switcher "x_grey"
 alias x_grey 		"cl_crosshair_red 200; 	cl_crosshair_green 200; 	cl_crosshair_blue 200; 	alias x_color_switcher x_yellow"
 alias x_yellow 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 0; 	alias x_color_switcher x_green"
-alias x_green 		"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue 0; 	alias x_color_switcher x_pink"
+alias x_green 		"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue 0; 	alias x_color_switcher x_red"
+alias x_red 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 0; 	alias x_color_switcher x_pink"
 alias x_pink 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_blue"
 alias x_blue 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_white"
-alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255; 	alias x_color_switcher x_red"
-alias x_red 		"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 0; 	alias x_color_switcher x_black"
+alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255; 	alias x_color_switcher x_black"
 alias x_black 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0; 	alias x_color_switcher x_grey"
 bind "KP_MINUS" "x_color_switcher"
 
