--- a/cfg/ugraphicstest.cfg
+++ b/cfg/ugraphicstest.cfg
@@ -50,7 +50,9 @@ mat_forceaniso 0
 mat_hdr_level 0
 mat_max_worldmesh_vertices 512
 mat_parallaxmap 0
-mat_picmip 2
+
+mat_picmip 2			//cause of the 2fort_invasion crash 27-10-2015
+
 mat_reducefillrate 1
 mat_reduceparticles 1
 mat_specular 0
