--- a/cfg/uxhairsettings.cfg
+++ b/cfg/uxhairsettings.cfg
@@ -1,4 +1,4 @@
-//In-game HUD settings (October 6th, 2015)
+//Customizable crosshair settings
 //manual (to use in configs)
 alias vm_on 		"r_drawviewmodel 1"
 alias vm_off 		"r_drawviewmodel 0"
@@ -29,7 +29,7 @@ alias x_blue 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 2
 alias x_white 		"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255"
 alias x_black 		"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 
-//automatic
+//automatic (binded)
 alias x_type_switcher "x_no1"
 alias x_no1 		"cl_crosshair_file "crosshair1"; 	alias x_type_switcher x_no2"
 alias x_no2 		"cl_crosshair_file "crosshair2"; 	alias x_type_switcher x_no3"
