--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -78,7 +78,9 @@ bind F4					"player_ready_toggle"
 bind F5 				"incrementvar mat_monitorgamma 1.6 2.6 0.1"
 bind F6 				"incrementvar mat_monitorgamma 1.6 2.6 -0.1"
 bind F7 				"toggle r_drawviewmodel 0 1"
-bind F8 				"toggle host_timescale 0 1 5"			//"toggle hud_saytext_time 0 3"
+bind F8 				"toggle tf_scoreboard_mouse_mode 0 1"
+						//"toggle host_timescale 0 1 5"			
+						//"toggle hud_saytext_time 0 3"
 bind F9 				"toggle mp_tournament_readymode 0 1"
 bind F10 				"hud_reloadscheme"
 bind F11				"toggle cl_hud_minmode 0 1"
