--- a/cfg/unetwork.cfg
+++ b/cfg/unetwork.cfg
@@ -1,5 +1,5 @@
 cl_cmdrate 					"67"
-cl_interp 					"0.0303"	//Projectiles/popping uber/flames = "0.0152" hitscan = "0.031" on bad connections = "0.062"
+cl_interp 					"0.0303"	//Projectiles/popping uber/flames = "0.0152"; hitscan = "0.031; 0.0303"; on bad connections = "0.062"
 cl_interp_ratio 			"1"
 cl_lagcompensation 			"1"
 cl_pred_optimize 			"2"
