--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -90,4 +90,4 @@ con_filter_text_out 						"No such variable"
 tf_hud_target_id_alpha 						"200"				//"100" by default
 tf_hud_target_id_disable_floating_health 	"1"
 tf_hud_target_id_show_avatars 				"1"					//works only with enabled floating health
-//tf_scoreboard_mouse_mode 					"1"
+tf_scoreboard_mouse_mode 					"1"					//f8
