--- a/cfg/ugraphics.cfg
+++ b/cfg/ugraphics.cfg
@@ -50,7 +50,7 @@ mat_picmip 							"2"			//textures quality, "-1" is best, "2" is worst
 mat_reducefillrate 					"1"
 mat_reduceparticles 				"1"
 mat_trilinear 						"0"
-mat_viewportscale 					"1"
+mat_viewportscale 					"0.75"		//"1" - max viewport scale
 mat_viewportupscale 				"1"
 mat_wateroverlaysize 				"1"
 mat_vsync 							"0"
