--- a/cfg/ugraphicstest.cfg
+++ b/cfg/ugraphicstest.cfg
@@ -1,196 +1,139 @@
-cl_playerspraydisable 0
-r_spray_lifetime 2
-mat_shadowstate 0
-r_shadowmaxrendered 0
-r_shadowrendertotexture 0
-r_shadows 0
-r_eyes 1
-r_flex 0
-r_lod 1
-r_rootlod 1
-r_teeth 1
-cl_ragdoll_fade_time 0
-cl_ragdoll_forcefade 1
-cl_ragdoll_physics_enable 0
-g_ragdoll_fadespeed 0
-g_ragdoll_lvfadespeed 0
-ragdoll_sleepaftertime 0
-cl_phys_props_enable 0
-cl_phys_props_max 0
-props_break_max_pieces 0
-r_propsmaxdist 1
-violence_agibs 0
-violence_hgibs 0
-cl_hud_playerclass_use_playermodel 0
-mat_phong 0
-r_rimlight 0 							//Test on 0
-cl_muzzleflash_dlight_1st 0  
-cl_detaildist 0
-cl_detailfade 0
-cl_drawmonitors 0
-cl_ejectbrass 0
-cl_jiggle_bone_framerate_cutoff 0
-cl_new_impact_effects 0
-cl_show_splashes 0
-func_break_max_pieces 0
-glow_outline_effect_enable 0
-lod_transitiondist 0
-mat_antialias 0
-mat_bumpmap 0
-mat_colcorrection_disableentities 0
-mat_colorcorrection 0
-mat_disable_bloom 1
-mat_disable_fancy_blending 1
-mat_disable_lightwarp 1
-mat_envmapsize 8
-mat_envmaptgasize 8
-mat_filterlightmaps 1
-mat_filtertextures 0
-mat_forceaniso 0
-mat_hdr_level 0
-mat_max_worldmesh_vertices 512
-mat_parallaxmap 0
-
-mat_picmip 2			//cause of the 2fort_invasion crash 27-10-2015
-
-mat_reducefillrate 1
-mat_reduceparticles 1
-mat_specular 0
-mat_trilinear 1
-mat_viewportscale 1
-mat_viewportupscale 1
-mat_wateroverlaysize 1
-mp_decals 9
-r_3dsky 0
-r_ambientboost 0
-r_ambientfactor 0
-r_ambientmin 0
-r_avglight 0
-r_cheapwaterend 1
-r_cheapwaterstart 1
-r_decals 9
-r_maxmodeldecal 9
-r_decalstaticprops 0
-r_decal_cullsize 15
-r_drawdetailprops 0
-r_drawmodeldecals 0
-r_drawflecks 0
-r_dynamic 0
-r_flashlightdepthtexture 0
-r_forcewaterleaf 1
-r_lightaverage 0
-r_maxnewsamples 0
-r_maxsampledist 1
-r_occlusion 0
-r_pixelfog 1					//Test on 1
-r_propsmaxdist 0
-r_renderoverlayfragment 0
-r_staticprop_lod 4
-r_waterdrawreflection 0
-r_waterdrawrefraction 1
-r_waterforceexpensive 0
-r_waterforcereflectentities 0
-r_drawtracers_firstperson 0
-rope_averagelight 0
-rope_collide 0
-rope_rendersolid 0
-rope_shake 0
-rope_smooth 0
-rope_subdiv 0
-rope_wind_dist 0
-tf_particles_disable_weather 1
-tracer_extra 0
-violence_ablood 1
-violence_hblood 1
-mat_motion_blur_enabled 0
-mat_motion_blur_forward_enabled 0
-mat_motion_blur_strength 0
-in_usekeyboardsampletime 0
-mat_clipz 1
-mat_forcehardwaresync 0
-mat_levelflush 1
-m_rawinput 1
-mat_vsync 0
-r_fastzreject -1
-ai_expression_optimization 1
-fast_fogvolume 1
-host_thread_mode 0
-mod_load_anims_async 1
-mod_load_mesh_async 1
-mod_load_vcollide_async 1
-
-dsp_enhance_stereo 0
-dsp_slow_cpu 1
-snd_async_fullyasync 1
-snd_pitchquality 0
-snd_spatialize_roundrobin 1
-snd_mixahead .05
-
-// ----------------------------------------------------------------------------
-// Threading
-// ----------------------------------------------------------------------------
-mat_queue_mode 2 // mat_queue mode is another frequently asked about cvar, it
-                 // defines the threading method to be used by the material
-                 // system. It has been unstable to use in the past, but
-                 // nowadays it's generally okay.
-                 //
-                 // Here are the possible values:
-                 //     -2 legacy default
-                 //     -1 default
-                 //      0 synchronous single thread
-                 //      1 queued single thread
-                 //      2 queued multithreaded
-                 //
-                 // If you have problems with the value `2', try setting it to
-                 // `-1'.
-                 //
-                 // As an aside, there are quite a few bugs in the demo system
-                 // that occur when mat_queue_mode is set to a value that is
-                 // not `-1'. If you intend to do work with the demo system,
-                 // maybe you should change this.
-				 //
-				 //After immense testing I've found that default works perfectly
-				 //fine with setting your Thread usage. It automatically set me
-				 //to 2 every time. I'd say it's safer and likely less buggy to
-				 //leave this at -1 than it is at 2.
-				 //
-				 //As a side not I've noticed micro stutters with mat_queue_mode 2
-				 //at 1000+ fps where mat_queue_mode 1 did not stutter at 1000+ fps				 				 
-
-cl_threaded_bone_setup 1 // WARNING if you don't have a Quad-Core CPU or better you SHOULD NOT LEAVE THIS ON
-cl_threaded_client_leaf_system 0
-r_queued_decals 0
-r_queued_ropes 1
-r_queued_post_processing 1
-r_threaded_client_shadow_manager 1
-r_threaded_particles 1
-r_threaded_renderables 1
-net_queue_trace 0
-hud_deathnotice_time 6
-hud_achievement_glowtime 0
-hud_achievement_count 0
-hud_achievement_tracker 0
-
-
-cl_localnetworkbackdoor 0 //Network optimizations for Singleplayer, disabling has about a 1-2% fps boost
-cl_cloud_settings 0
-//cl_notifications_show_ingame 0 // Pretty sure this disables Trade/Duel Notifications
-sys_minidumpspewlines 500 // Basically the number of lines saved to a log file from console. No FPS boost but 15% lower FPS variance
-cl_loadondemand_default 0
-
-
-cl_forcepreload 1
-cl_ask_blacklist_opt_out "1"
-cl_ask_favorite_opt_out "1"
-sb_dontshow_maxplayer_warning "1"
-tf_explanations_backpackpanel "1"
-tf_explanations_charinfo_armory_panel "1"
-tf_explanations_charinfopanel "1"
-tf_explanations_craftingpanel "1"
-tf_explanations_discardpanel "1"
-tf_explanations_store "1"
-tf_training_has_prompted_for_forums "1"
-tf_training_has_prompted_for_loadout "1"
-tf_training_has_prompted_for_offline_practice "1"
-tf_training_has_prompted_for_options "1"
-tf_training_has_prompted_for_training "1"
+ai_expression_optimization 			"1"
+cl_detaildist 						"0"
+cl_detailfade 						"0"
+cl_drawmonitors 					"0"
+cl_ejectbrass 						"0"
+cl_forcepreload 					"1"
+cl_jiggle_bone_framerate_cutoff 	"0"
+cl_localnetworkbackdoor 			"0"
+cl_muzzleflash_dlight_1st 			"0"
+cl_new_impact_effects 				"0"
+cl_phys_props_enable 				"0"
+cl_phys_props_max 					"0"
+cl_playerspraydisable 				"0"
+cl_ragdoll_fade_time 				"0"
+cl_ragdoll_forcefade 				"1"
+cl_ragdoll_physics_enable 			"0"
+cl_show_splashes 					"0"
+cl_threaded_bone_setup 				"1"
+cl_threaded_client_leaf_system 		"0"
+dsp_enhance_stereo 					"0"
+dsp_slow_cpu 						"1"
+fast_fogvolume 						"1"
+fog_enable 							"0"
+fps_max 							"0"			//"132"; "300"
+func_break_max_pieces 				"0"
+glow_outline_effect_enable 			"1"			//"0" on DX8; "1" on DX9
+g_ragdoll_fadespeed 				"0"
+g_ragdoll_lvfadespeed 				"0"
+host_thread_mode 					"0"
+in_usekeyboardsampletime 			"0"
+lod_transitiondist 					"0"
+mat_antialias 						"0"
+mat_bumpmap 						"0"			//"0" on DX8; "1" on DX9
+mat_clipz 							"1"
+mat_colcorrection_disableentities 	"0"
+mat_colorcorrection 				"0"
+mat_disable_bloom 					"1"
+mat_disable_fancy_blending 			"1"
+mat_disable_lightwarp 				"1"
+mat_envmapsize 						"8"
+mat_envmaptgasize 					"8"
+mat_filterlightmaps 				"0"			//"0" on DX8; "1" on DX9
+mat_filtertextures 					"0"			//"0" - squared textures; "1" - smooth textures
+mat_forceaniso 						"0"
+mat_forcehardwaresync 				"0"
+mat_hdr_level 						"0"
+mat_levelflush 						"1"
+mat_max_worldmesh_vertices 			"512"
+mat_motion_blur_enabled 			"0"
+mat_motion_blur_forward_enabled 	"0"
+mat_motion_blur_strength 			"0"
+mat_parallaxmap 					"0"
+mat_phong 							"0"
+mat_picmip 							"2"			//cause of the 2fort_invasion crash. Use "1" 27-10-2015
+mat_queue_mode 						"2"			//multicore rendering; "2" is on, "0"-"1" is off		 				
+mat_reducefillrate 					"1"
+mat_reduceparticles 				"1"
+mat_shadowstate 					"0"			//"1" - enable shadows (1/4)
+mat_specular 						"0"			//"1" - enable uber shining; "0" - disable
+mat_trilinear 						"1"
+mat_viewportscale 					"0.75"		//"1" - max viewport scale
+mat_viewportupscale 				"1"
+mat_vsync 							"0"
+mat_wateroverlaysize 				"1"
+mod_load_anims_async 				"1"
+mod_load_mesh_async 				"1"
+mod_load_vcollide_async 			"1"
+mp_decals 							"9"
+m_rawinput 							"1"
+net_queue_trace 					"0"
+props_break_max_pieces 				"0"
+ragdoll_sleepaftertime 				"0"
+rope_averagelight 					"0"
+rope_collide 						"0"
+rope_rendersolid 					"0"
+rope_shake 							"0"
+rope_smooth 						"0"
+rope_subdiv 						"0"
+rope_wind_dist 						"0"
+r_3dsky 							"1"			//map background
+r_ambientboost 						"0"
+r_ambientfactor 					"0"
+r_ambientmin 						"0"
+r_avglight 							"0"
+r_cheapwaterend 					"1"
+r_cheapwaterstart 					"1"
+r_decals 							"9"
+r_decalstaticprops 					"0"
+r_decal_cullsize 					"15"
+r_drawdetailprops 					"0"
+r_drawflecks 						"0"
+r_drawmodeldecals 					"0"
+r_drawtracers_firstperson 			"0"
+r_drawtracers_firstperson 			"0"
+r_dynamic 							"0"
+r_eyes 								"1"
+r_fastzreject 						"-1"
+r_flashlightdepthtexture 			"0"
+r_flex 								"1"
+r_forcewaterleaf 					"1"
+r_lightaverage 						"0"
+r_lod 								"1"
+r_maxmodeldecal 					"9"
+r_maxnewsamples 					"0"
+r_maxsampledist 					"1"
+r_occlusion 						"0"
+r_pixelfog 							"1"
+r_propsmaxdist 						"0"
+r_propsmaxdist 						"1"
+r_queued_decals 					"0"
+r_queued_post_processing 			"1"
+r_queued_ropes 						"1"
+r_renderoverlayfragment 			"0"
+r_rimlight 							"0"
+r_rootlod 							"1"
+r_shadowmaxrendered 				"0"			//"11" - enable shadows (2/4)
+r_shadowrendertotexture 			"0"			//"1" - enable shadows (3/4)
+r_shadows 							"0"			//"1" - enable shadows (4/4)
+r_spray_lifetime 					"2"
+r_staticprop_lod 					"4"
+r_teeth 							"1"
+r_threaded_client_shadow_manager 	"1"
+r_threaded_particles 				"1"
+r_threaded_renderables 				"1"
+r_waterdrawreflection 				"0"
+r_waterdrawrefraction 				"1"
+r_waterforceexpensive 				"0"
+r_waterforcereflectentities 		"0"
+snd_async_fullyasync 				"1"
+snd_mixahead 						"0.05"
+snd_pitchquality 					"0"
+snd_spatialize_roundrobin 			"1"
+sys_minidumpspewlines 				"500"
+tf_particles_disable_weather 		"1"
+tracer_extra 						"0"
+violence_ablood 					"1"
+violence_agibs 						"0"
+violence_hblood 					"1"
+violence_hgibs 						"0"
