--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -9,7 +9,7 @@ exec ubinds
 
 clear
 echo ""
-echo "* Eniere's config loaded - November 14th, 2015 *"
+echo "* Config loaded *"
 echo ""
 
 //-dxlevel 81 -novid -w 1280 -h 720 -full
