--- a/cfg/ugraphicstest.cfg
+++ b/cfg/ugraphicstest.cfg
@@ -30,7 +30,7 @@ host_thread_mode 					"0"
 in_usekeyboardsampletime 			"0"
 lod_transitiondist 					"0"
 mat_antialias 						"0"
-mat_bumpmap 						"0"			//"0" on DX8; "1" on DX9
+mat_bumpmap 						"1"			//	*	"0" on DX8; "1" on DX9
 mat_clipz 							"1"
 mat_colcorrection_disableentities 	"0"
 mat_colorcorrection 				"0"
@@ -39,7 +39,7 @@ mat_disable_fancy_blending 			"1"
 mat_disable_lightwarp 				"1"
 mat_envmapsize 						"8"
 mat_envmaptgasize 					"8"
-mat_filterlightmaps 				"0"			//"0" on DX8; "1" on DX9
+mat_filterlightmaps 				"1"			//	*	"0" on DX8; "1" on DX9
 mat_filtertextures 					"0"			//"0" - squared textures; "1" - smooth textures
 mat_forceaniso 						"0"
 mat_forcehardwaresync 				"0"
@@ -51,14 +51,14 @@ mat_motion_blur_forward_enabled 	"0"
 mat_motion_blur_strength 			"0"
 mat_parallaxmap 					"0"
 mat_phong 							"0"
-mat_picmip 							"2"			//cause of the 2fort_invasion crash. Use "1" 27-10-2015
+mat_picmip 							"-1"		//	*	textures quality. Cause of the 2fort_invasion crash. Use "1" 27-10-2015
 mat_queue_mode 						"2"			//multicore rendering; "2" is on, "0"-"1" is off		 				
 mat_reducefillrate 					"1"
 mat_reduceparticles 				"1"
 mat_shadowstate 					"0"			//"1" - enable shadows (1/4)
 mat_specular 						"0"			//"1" - enable uber shining; "0" - disable
 mat_trilinear 						"1"
-mat_viewportscale 					"0.75"		//"1" - max viewport scale
+mat_viewportscale 					"1"			//"1" - max viewport scale
 mat_viewportupscale 				"1"
 mat_vsync 							"0"
 mat_wateroverlaysize 				"1"
