--- a/cfg/ugraphicsdx81.cfg
+++ b/cfg/ugraphicsdx81.cfg
@@ -29,7 +29,7 @@ g_ragdoll_lvfadespeed 				"0"
 host_thread_mode 					"0"
 in_usekeyboardsampletime 			"0"
 lod_transitiondist 					"0"
-mat_antialias 						"0"
+mat_antialias 						"1"
 mat_bumpmap 						"0"			//	*	"0" on DX8; "1" on DX9
 mat_clipz 							"1"
 mat_colcorrection_disableentities 	"0"
@@ -51,7 +51,7 @@ mat_motion_blur_forward_enabled 	"0"
 mat_motion_blur_strength 			"0"
 mat_parallaxmap 					"0"
 mat_phong 							"0"
-mat_picmip 							"-1"		//	*	textures quality. Cause of the 2fort_invasion crash. Use "1" 27-10-2015
+mat_picmip 							"2"			//	*	textures quality. Cause of the 2fort_invasion crash. Use "1" 27-10-2015
 mat_queue_mode 						"2"			//multicore rendering; "2" is on, "0"-"1" is off		 				
 mat_reducefillrate 					"1"
 mat_reduceparticles 				"1"
@@ -90,8 +90,7 @@ r_decal_cullsize 					"15"
 r_drawdetailprops 					"0"
 r_drawflecks 						"0"
 r_drawmodeldecals 					"0"
-r_drawtracers_firstperson 			"0"
-r_drawtracers_firstperson 			"0"
+r_drawtracers_firstperson 			"1"			//tracers
 r_dynamic 							"0"
 r_eyes 								"1"
 r_fastzreject 						"-1"
