--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -20,8 +20,10 @@ host_timescale 							"1"
 tf_bot_keep_class_after_death 			"1"
 tf_bot_add 1 scout red 					"RED Scout"
 tf_bot_add 1 medic red 					"RED Medic"
+tf_bot_add 1 soldier red 					"RED_GUY_WITH_A_VERY_LONG_NAME"
 tf_bot_add 1 scout blue 				"BLU Scout"
 tf_bot_add 1 medic blue 				"BLU Medic"
+tf_bot_add 1 soldier blue 					"BLU_GUY_WITH_A_VERY_LONG_NAME"
 mp_tournament_readymode 				"0"
 
 //vgui_drawtree							"1"
