--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -87,7 +87,11 @@ con_filter_text_out 						"Attemped to precache"
 con_filter_text_out 						"Connection to game coordinator established"
 con_filter_text_out 						"Error: Material"
 con_filter_text_out 						"No such variable"
+con_filter_text_out 						"class C_DynamicProp"
 tf_hud_target_id_alpha 						"200"				//"100" by default
 tf_hud_target_id_disable_floating_health 	"1"
 tf_hud_target_id_show_avatars 				"1"					//works only with enabled floating health
-tf_scoreboard_mouse_mode 					"1"					//f8
+tf_scoreboard_mouse_mode 					"1"
+tf_scoreboard_ping_as_text					"0"
+tf_scoreboard_alt_class_icons				"0"
+tf_enable_glows_after_respawn				"1"
