--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -11,7 +11,7 @@ alias -autocall_temp_hit 	"autocall_initial"
 alias slot1bind 			"slot1; autocall_temp"
 alias slot2bind 			"slot2; autocall_initial"
 
-alias +medigun 				"slot2; +attack; autocall_initial; r_drawviewmodel 0; viewmodel_fov 40"
+alias +medigun 				"slot2; +attack; autocall_initial; r_drawviewmodel 1; viewmodel_fov 54" //40
 alias -medigun 				"-attack"
 alias +crossbow 			"slot1; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 70"
 alias -crossbow 			"-attack"
