--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -75,13 +75,13 @@ bind F1 				"toggle volume 0 0.05"
 bind F2 				"incrementvar volume 0 0.3 -0.01"
 bind F3 				"incrementvar volume 0 0.3 0.01"
 bind F4					"player_ready_toggle"
-bind F5 				"incrementvar mat_monitorgamma 1.6 2.6 0.1"
-bind F6 				"incrementvar mat_monitorgamma 1.6 2.6 -0.1"
+unbind F5 				//"incrementvar mat_monitorgamma 1.6 2.6 0.1"
+unbind F6 				//"incrementvar mat_monitorgamma 1.6 2.6 -0.1"
 bind F7 				"toggle r_drawviewmodel 0 1"
-bind F8 				"toggle tf_scoreboard_mouse_mode 0 1"
+unbind F8 				//"toggle tf_scoreboard_mouse_mode 0 1"
 						//"toggle host_timescale 0 1 5"			
 						//"toggle hud_saytext_time 0 3"
-bind F9 				"toggle mp_tournament_readymode 0 1"
+unbind F9 				//"toggle mp_tournament_readymode 0 1"
 bind F10 				"hud_reloadscheme"
 bind F11				"toggle cl_hud_minmode 0 1"
 unbind F12
