--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -26,7 +26,7 @@ alias fakeuber 				"voicemenu 1 7; say_team 		"* Stay calm, it was a fake *""
 alias maskuber 				"voicemenu 2 5; say_team 		"* Uber is ready to use *""
 alias preset_A 				"load_itempreset 0; say_team 	"* Took the Kritzkrieg *"
 alias preset_B 				"load_itempreset 1; say_team 	"* Took the Medigun *"
-alias preset_D 				"load_itempreset 3; say_team 	"* Took the Quickfix *"
+alias preset_D 				"load_itempreset 3"
 
 bind c 						"fakeuber"
 bind KP_HOME 				"preset_A"
