--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -21,11 +21,12 @@ alias -cjump 			"-duck; -jump"
 alias melee 			"slot3"
 
 alias prec 				"prec_mark; voicemenu 2 5"
-alias local 			"exec ulocalhost.cfg"
-alias rec 				"exec udemo.cfg"
+alias local 			"exec ulocalhost"
+alias rec 				"exec udemos"
 alias preset1 			"load_itempreset 0"
 alias preset2 			"load_itempreset 1"
 alias preset3 			"load_itempreset 3"
+alias spec				"exec uspectate"
 
 alias vm_on 			"r_drawviewmodel 1"
 alias vm_off 			"r_drawviewmodel 0"
@@ -50,6 +51,7 @@ alias x_yellow 			"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_
 alias x_green 			"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue 0"
 alias x_pink 			"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 255"
 alias x_blue 			"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255"
+alias x_red 			"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 alias x_white 			"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255"
 alias x_black 			"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0"
 
@@ -67,7 +69,8 @@ alias x_grey 			"cl_crosshair_red 200; 	cl_crosshair_green 200; 	cl_crosshair_bl
 alias x_yellow 			"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 0; 	alias x_color_switcher x_green"
 alias x_green 			"cl_crosshair_red 0; 	cl_crosshair_green 255; 	cl_crosshair_blue 0; 	alias x_color_switcher x_pink"
 alias x_pink 			"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_blue"
-alias x_blue 			"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_white"
+alias x_blue 			"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 255; 	alias x_color_switcher x_red"
+alias x_red 			"cl_crosshair_red 255; 	cl_crosshair_green 0; 		cl_crosshair_blue 0; 	alias x_color_switcher x_white"
 alias x_white 			"cl_crosshair_red 255; 	cl_crosshair_green 255; 	cl_crosshair_blue 255; 	alias x_color_switcher x_black"
 alias x_black 			"cl_crosshair_red 0; 	cl_crosshair_green 0; 		cl_crosshair_blue 0; 	alias x_color_switcher x_grey"
 
