--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -55,7 +55,7 @@ bind ` 					"toggleconsole"
 bind , 					"changeclass"
 bind . 					"changeteam"
 unbind /
-bind SPACE 				"+jump"
+bind SPACE 				"+cjump"
 bind BACKSPACE 			"dropitem"
 bind TAB 				"+showscores"
 bind ESCAPE 			"cancelselect"
