--- a/cfg/ugraphicsdx81.cfg
+++ b/cfg/ugraphicsdx81.cfg
@@ -136,3 +136,20 @@ violence_ablood 					"1"
 violence_agibs 						"0"
 violence_hblood 					"1"
 violence_hgibs 						"0"
+
+r_sse2 1
+r_sse_s 1
+cl_burninggibs 1
+r_3dnow 0
+r_3dsky 0
+mp_usehwmmodels 0                               
+mp_usehwmvcds   0
+mat_queue_mode "2"
+r_threaded_client_shadow_manager "0"
+cl_threaded_client_leaf_system "0"
+r_threaded_particles "0"
+r_threaded_renderables "0"
+cl_threaded_bone_setup "0"
+r_queued_decals "0"
+r_queued_ropes "0"
+r_queued_post_processing "0"
