--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -18,6 +18,8 @@ mp_tournament_restart
 mp_friendlyfire 						"1"
 host_timescale 							"1"
 tf_bot_keep_class_after_death 			"1"
+mp_tournament_redteamname				"Red colored guys"
+mp_tournament_blueteamname				"Blue colored guys"
 tf_bot_add 1 scout red 					"RED Scout"
 tf_bot_add 1 medic red 					"RED Medic"
 tf_bot_add 1 soldier red 					"RED_GUY_WITH_A_VERY_LONG_NAME"
