--- a/cfg/uspectate.cfg
+++ b/cfg/uspectate.cfg
@@ -1,3 +1,6 @@
+exec ubinds
+bind SPACE 			"+jump"
+
 bind 1 				"spec_player_ex 3 0; spec_autodirector 0"
 bind 2 				"spec_player_ex 3 1; spec_autodirector 0"
 bind 3 				"spec_player_ex 3 2; spec_autodirector 0"
