--- a/cfg/userver.cfg
+++ b/cfg/userver.cfg
@@ -1,9 +1,9 @@
-// Server Control Panel (ETF2L S22) by Eniere, October 5th, 2015
+// Server Control Panel (ETF2L S23) by Eniere, February 5th, 2016
 // 1. Replace "*****" with your specific server data;
 // 2. Put this CFG to your custom\YOURSTUFF\cfg\ folder;
 // 3. Add "exec servercontrols" into your autoexec.cfg, then restart Team Fortress 2.
 
-alias homeserver 	"connect 176.9.40.115:20046; password pcw"
+alias homeserver 	""
 alias rpass		 	"rcon_password mixup; toggleconsole; clear; echo "Type the next command here:"; echo ""; echo "rcon_password *****"; echo ""; echo "where '*****' - your rcon password for current server."; echo "Then you can close this window and use Control Panel buttons to manage game config and maps."; echo ""; "
 
 alias 5cpcfg 		"rcon exec etf2l_6v6_5cp.cfg"
@@ -14,6 +14,6 @@ alias map1 			"rcon changelevel cp_badlands; 				rcon changelevel cp_badlands"
 alias map2 			"rcon changelevel cp_gullywash_final1; 		rcon changelevel cp_gullywash_final1"
 alias map3 			"rcon changelevel cp_process_final; 		rcon changelevel cp_process_final"
 alias map4 			"rcon changelevel cp_snakewater_final1; 	rcon changelevel cp_snakewater_final1"
-alias map5 			"rcon changelevel cp_sunshine_rc8; 			rcon changelevel cp_sunshine_rc8"
+alias map5 			"rcon changelevel cp_sunshine_rc9; 			rcon changelevel cp_sunshine_rc9"
 alias map6 			"rcon changelevel koth_product_rc8; 		rcon changelevel koth_product_rc8"
 alias map7 			"rcon changelevel cp_granary_pro_b10; 		rcon changelevel cp_granary_pro_b10"
