--- a/config-mm/cfg/userver.cfg
+++ b/config-mm/cfg/userver.cfg
@@ -4,7 +4,7 @@
 // 3. Add "exec servercontrols" into your autoexec.cfg, then restart Team Fortress 2.
 
 alias homeserver 	""
-alias rpass		 	"toggleconsole; clear; echo "Type the next command here:"; echo ""; echo "rcon_password *****"; echo ""; echo "where '*****' - your rcon password for current server."; echo "Then you can close this window and use Control Panel buttons to manage game config and maps."; echo ""; "
+alias rpass		 	"rcon_password mixup; toggleconsole; clear; echo "Type the next command here:"; echo ""; echo "rcon_password *****"; echo ""; echo "where '*****' - your rcon password for current server."; echo "Then you can close this window and use Control Panel buttons to manage game config and maps."; echo ""; "
 
 alias 5cpcfg 		"rcon exec etf2l_6v6_5cp.cfg"
 alias kothcfg 		"rcon exec etf2l_6v6_koth.cfg"
