--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -6,10 +6,13 @@ exec userver
 exec ualiases
 exec ubinds
 
+r_drawviewmodel 	"1"
+viewmodel_fov 		"54"
+
 clear
 echo ""
 echo "* Config loaded *"
 echo ""
 
-//-dxlevel 81 -novid -w 1280 -h 720 -full
-//-dxlevel 95 -novid -w 1920 -h 800 -sw -noborder
+//-novid -w 1920 -h 1080 -full
+//-novid -w 1280 -h 720 -sw -noborder
