--- a/cfg/medicpub.cfg
+++ b/cfg/medicpub.cfg
@@ -1,8 +1,8 @@
 exec ualiases
 exec ubinds
 
-r_drawviewmodel 			"1"
-sensitivity 				"2.6"
+//r_drawviewmodel 			"1"
+sensitivity 				"2.5"
 
 alias autocall_initial 		"hud_medicautocallersthreshold 50"
 alias autocall_temp 		"hud_medicautocallersthreshold 150"
@@ -11,13 +11,13 @@ alias -autocall_temp_hit 	"autocall_initial"
 alias slot1bind 			"slot1; autocall_temp"
 alias slot2bind 			"slot2; autocall_initial"
 
-alias +medigun 				"slot2; +attack; autocall_initial; r_drawviewmodel 1; viewmodel_fov 54"
+alias +medigun 				"slot2; +attack; autocall_initial"
 alias -medigun 				"-attack"
-alias +crossbow 			"slot1; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 90"
+alias +crossbow 			"slot1; +attack; autocall_temp"
 alias -crossbow 			"-attack"
-alias +saw 					"slot3; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 90"
+alias +saw 					"slot3; +attack; autocall_temp"
 alias -saw 					"-attack"
-alias +charge 				"+attack2; slot2; dropitem; voicemenu 2 3; autocall_initial"
+alias +charge 				"+attack2; slot2; dropitem; autocall_initial"
 alias -charge 				"-attack2"
 alias +shiftmask 			"bind c "maskuber"; bind k "kill"; +showscores"
 alias -shiftmask 			"bind c "fakeuber"; unbind x; -showscores"
@@ -33,9 +33,9 @@ bind KP_HOME 				"preset_A"
 bind KP_UPARROW 			"preset_B"
 bind KP_PGUP 				"preset_D"
 bind SHIFT 					"+shiftmask"
-bind SPACE 					"+cjump"
+//bind SPACE 					"+cjump"
 bind MOUSE1 				"+medigun"
 bind MOUSE2 				"+crossbow"
-bind MOUSE3 				"+reload"
+bind MOUSE3 				"+attack3"	//"+reload"
 bind MOUSE4 				"+charge"
 bind MOUSE5 				"+saw"
