--- a/cfg/pyro.cfg
+++ b/cfg/pyro.cfg
@@ -1,7 +1,7 @@
 exec ualiases
 exec ubinds
 
-r_drawviewmodel 	"1"
-viewmodel_fov 		"70"
+//r_drawviewmodel 	"1"
+//viewmodel_fov 		"70"
 
 //exec tfdb
