--- a/cfg/spy.cfg
+++ b/cfg/spy.cfg
@@ -1,8 +1,8 @@
 exec ualiases
 exec ubinds
 
-r_drawviewmodel 	"1"
-viewmodel_fov 		"90"
+//r_drawviewmodel 	"1"
+//viewmodel_fov 		"90"
 
 alias +sapper 		"build 3 0; +attack"
 alias -sapper 		"slot2; -attack"
