--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -1,3 +1,8 @@
+alias mm 				"plugin_unload "custom\config\addons\PREC.dll""
+alias mm_1 				"plugin_unload "custom\config\addons\PREC.dll""
+alias mm0 				"plugin_load "custom\config\addons\PREC.dll""
+alias mm_0 				"plugin_load "custom\config\addons\PREC.dll""
+
 alias +mfwd 			"-back; +forward; alias checkfwd +forward"
 alias +mback 			"-forward; +back; alias checkback +back"
 alias +mleft 			"-moveright; +moveleft; alias checkleft +moveleft"
