--- a/cfg/udemos.cfg
+++ b/cfg/udemos.cfg
@@ -1,13 +1,13 @@
 exec ualiases
 exec ubinds
 
-r_drawviewmodel 					"1"
-viewmodel_fov 						"70"
+//r_drawviewmodel 					"1"
+//viewmodel_fov 						"70"
 
 //studio_queue_mode 					"0"
-mat_queue_mode 						"1"		//-1 by def, 2 is on, 0-1 is off
+//mat_queue_mode 						"1"		//-1 by def, 2 is on, 0-1 is off
 hud_saytext_time 					"0"
-cl_hud_playerclass_use_playermodel 	"0"
+//cl_hud_playerclass_use_playermodel 	"0"
 volume 								"0.01"
 hud_damagemeter 					"0"
 hud_damagemeter_ooctimer 			"1"
