--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -9,7 +9,7 @@ mp_respawnwavetime 						"7.0"
 mp_teams_unbalance_limit 				"0"
 mp_tournament 							"1"
 mp_tournament_stopwatch 				"1"
-tv_enable 								"1"
+tv_enable 								"0"
 sv_cheats 								"1"
 tf_tournament_hide_domination_icons 	"1"
 tf_use_fixed_weaponspreads 				"1"
@@ -18,15 +18,15 @@ mp_tournament_restart
 mp_friendlyfire 						"1"
 host_timescale 							"1"
 tf_bot_keep_class_after_death 			"1"
-mp_tournament_redteamname				"Red colored guys"
-mp_tournament_blueteamname				"Blue colored guys"
+//mp_tournament_redteamname				"Red colored guys"
+//mp_tournament_blueteamname				"Blue colored guys"
 tf_bot_add 1 scout red 					"RED Scout"
 tf_bot_add 1 medic red 					"RED Medic"
-tf_bot_add 1 soldier red 					"RED_GUY_WITH_A_VERY_LONG_NAME"
+tf_bot_add 1 soldier red 					"12345678901234567890"
 tf_bot_add 1 scout blue 				"BLU Scout"
 tf_bot_add 1 medic blue 				"BLU Medic"
-tf_bot_add 1 soldier blue 					"BLU_GUY_WITH_A_VERY_LONG_NAME"
-mp_tournament_readymode 				"0"
+tf_bot_add 1 soldier blue 					"123456789012345678901"
+//mp_tournament_readymode 				"0"
 
 //vgui_drawtree							"1"
 
