--- a/cfg/engineer.cfg
+++ b/cfg/engineer.cfg
@@ -1,7 +1,7 @@
 exec ualiases
 exec ubinds
 
-r_drawviewmodel 	"1"
-viewmodel_fov 		"70"
+//r_drawviewmodel 	"1"
+//viewmodel_fov 		"70"
 
-bind MOUSE4 		"build 2 0"
+//bind MOUSE4 		"build 2 0"
