--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -1,8 +1,8 @@
 exec ualiases
 exec ubinds
 
-r_drawviewmodel 			"1"
-sensitivity 				"2.6"
+//r_drawviewmodel 			"1"
+sensitivity 				"2.5"
 
 alias autocall_initial 		"hud_medicautocallersthreshold 50"
 alias autocall_temp 		"hud_medicautocallersthreshold 150"
@@ -11,11 +11,11 @@ alias -autocall_temp_hit 	"autocall_initial"
 alias slot1bind 			"slot1; autocall_temp"
 alias slot2bind 			"slot2; autocall_initial"
 
-alias +medigun 				"slot2; +attack; autocall_initial; r_drawviewmodel 1; viewmodel_fov 54" //40
+alias +medigun 				"slot2; +attack; autocall_initial" //viewmodel_fov 54; r_drawviewmodel 1
 alias -medigun 				"-attack"
-alias +crossbow 			"slot1; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 70"
+alias +crossbow 			"slot1; +attack; autocall_temp" //viewmodel_fov 70; r_drawviewmodel 1
 alias -crossbow 			"-attack"
-alias +saw 					"slot3; +attack; autocall_temp; r_drawviewmodel 1; viewmodel_fov 90"
+alias +saw 					"slot3; +attack; autocall_temp" //viewmodel_fov 90; r_drawviewmodel 1
 alias -saw 					"-attack"
 alias +charge 				"+attack2; slot2; dropitem; say_team "* Using the Uber *"; voicemenu 2 3; autocall_initial"
 alias -charge 				"-attack2"
@@ -24,18 +24,18 @@ alias -shiftmask 			"bind c "fakeuber"; unbind x; -showscores"
 
 alias fakeuber 				"voicemenu 1 7; say_team 		"* Stay calm, it was a fake *""
 alias maskuber 				"voicemenu 2 5; say_team 		"* Uber is ready to use *""
-alias preset_A 				"load_itempreset 0; say_team 	"* Took the Kritzkrieg *"
-alias preset_B 				"load_itempreset 1; say_team 	"* Took the Medigun *"
-alias preset_D 				"load_itempreset 3"
+alias preset_A 				"load_itempreset 0; say_team 	"* Took the Kritzkrieg *""
+alias preset_B 				"load_itempreset 1; say_team 	"* Took the Medigun *""
+alias preset_D 				"load_itempreset 3; say_team 	"* Took the Quick-Fix *""
 
 bind c 						"fakeuber"
 bind KP_HOME 				"preset_A"
 bind KP_UPARROW 			"preset_B"
 bind KP_PGUP 				"preset_D"
 bind SHIFT 					"+shiftmask"
-bind SPACE 					"+cjump"
+//bind SPACE 					"+cjump"
 bind MOUSE1 				"+medigun"
 bind MOUSE2 				"+crossbow"
-bind MOUSE3 				"+reload"
+bind MOUSE3 				"+attack3"	//"+reload"
 bind MOUSE4 				"+charge"
 bind MOUSE5 				"+saw"
