--- a/cfg/soldier.cfg
+++ b/cfg/soldier.cfg
@@ -1,16 +1,16 @@
 exec ualiases
 exec ubinds
 
-r_drawviewmodel 	"1"
-viewmodel_fov 		"90"
+//r_drawviewmodel 	"1"
+//viewmodel_fov 		"90"
 
 alias +primary 		"slot1; +attack"
 alias -primary 		"-attack"
 alias +secondary 	"slot2; +attack"
 alias -secondary 	"-attack"
-alias +melee 		"slot3; +attack; voicemenu 2 3"
+alias +melee 		"slot3; +attack; voicemenu 2 5"
 alias -melee 		"-attack"
 bind mouse1 		"+primary"
 bind mouse2 		"+secondary"
 bind mouse5 		"+melee"
-bind SPACE 			"+cjump"
+//bind SPACE 			"+cjump"
