--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -67,7 +67,7 @@ cc_predisplay_time 							"0"
 cc_linger_time 								"4"
 tf_hud_show_servertimelimit 				"1"
 hud_saytext_time 							"3"
-cl_hud_playerclass_use_playermodel 			"0"
+cl_hud_playerclass_use_playermodel 			"1"					//0
 mat_monitorgamma 							"2.0"
 dsp_enhance_stereo 							"0"
 snd_surround_speakers 						"0"
@@ -91,8 +91,27 @@ con_filter_text_out 						"class C_DynamicProp"
 tf_hud_target_id_alpha 						"200"				//"100" by default
 tf_hud_target_id_disable_floating_health 	"1"
 tf_hud_target_id_show_avatars 				"1"					//works only with enabled floating health
-tf_scoreboard_mouse_mode 					"1"
+tf_scoreboard_mouse_mode 					"2"
 tf_scoreboard_ping_as_text					"1"
 tf_scoreboard_alt_class_icons				"0"
 tf_enable_glows_after_respawn				"1"
 hud_combattext_doesnt_block_overhead_text 	"1"
+tf_hud_show_servertimelimit 				"1" 	// Show server time remaining at round timer
+hud_combattext 								"1"
+cl_use_tournament_specgui 					"1" 	// Tournament hud
+cl_spec_carrieditems 						"0"
+tf_spectator_target_location 				"0"		// Hudlayout.res location for Spectator TargetID
+tf_hud_target_id_alpha 						"200"	// Transparency for TargetID BG
+tf_hud_target_id_disable_floating_health 	"1"
+tf_hud_target_id_show_avatars 				"1"		// Avatars in TargetID (#7 must be at "0") (0-Disable, 1-Everyone, 2-Friends)
+cl_showbackpackrarities 					"1" 	// Border colors in backpack
+tf_time_loading_item_panels 				"0.05" 	// Decrease loading backpack item load times
+tf_backpack_page_button_delay 				"0.25" 	// Decrease time hovering over page before switching
+cl_mvm_wave_status_visible_during_wave 		"1" 	// Show enemycountpanel contents during wave
+tf_spec_xray 								"2" 	// Show outlines for both teams (server setting)
+//tf_healthicon_height_offset 				"4" 	// Health above head offset
+hud_escort_interp 							"0.1" 	// Faster updating of cart HUD element
+cc_captiontrace 							"0"		// Display errors for missing captions (0=disabled,1=console,2=caption box)
+cc_predisplay_time 							"0" 	// Decrease time before showing caption
+//cc_sentencecaptionnorepeat				"2" 	// How often a caption can repeat
+vgui_drawtree_draw_selected 				"1" 	// Highlight panels in vgui_drawtree with a red border
